--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body>
 <h1 style="margin: 0.0px 0.0px 48.2px 0.0px; text-align: center; font: 72.0px 'Adobe Garamond Pro'; color: #000000; -webkit-text-stroke: #fb0007; ); min-height: 86.0px"><span class="s1"><b></b></span><br></h1>
 <h1 style="margin: 0.0px 0.0px 48.2px 0.0px; text-align: center; font: 72.0px 'Adobe Garamond Pro'; color: #000000; -webkit-text-stroke: #fa0007; )"><span class="s1"><b>korsune</b></span></h1>
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; text-align: center; font: 18.0px 'Adobe Garamond Pro'; color: #000000; -webkit-text-stroke: #fb0007; )"><span class="s1"><b>About</b></span></h2>
-<p class="p4"><span class="s1"><b>portal unto itself.</b></span></p>
+<p class="p4"><span class="s1"><b>a portal unto itself.</b></span></p>
 <p class="p4"><span class="s1"><b>© 2023<span class="Apple-converted-space"> </span></b></span></p>
 </body>
 </html>
